fix: increase affix link constract in dark mode

--- a/templates/modern/src/nav.scss
+++ b/templates/modern/src/nav.scss
@@ -143,6 +143,12 @@
   }
 }
 
+@include color-mode(dark) {
+  .affix .link-secondary {
+    color: var(--bs-secondary-text-emphasis);
+  }
+}
+
 .contribution {
   margin-top: 2rem;
 
